--- a/style.css
+++ b/style.css
@@ -159,6 +159,12 @@ input:hover {
     opacity: .9;
     transition-duration: 0.2s;
 }
+.index-form-group {
+    border: 2px solid rgb(255, 255, 255);
+    border-radius: 10px;
+    margin-bottom: 10px;
+    padding: 5px;
+}
 /* Document Design */
 
 .document-holder {
@@ -168,6 +174,7 @@ input:hover {
 }
 
 .document {
+    max-width: 780px;
     min-width: 780px;
     height: 1102.92px;
     background-color: white;
@@ -183,13 +190,13 @@ input:hover {
     margin-left: -50px;
 }
 .document-watermark img {
-    width: 350px;
+    width: 100%;
 }
 .document-watermark {
     position: absolute;
     top: 340px;
-    left: 185px;
-    right: 185px;
+    left: 170px;
+    right: 170px;
     z-index: -1;
 }
 .document-content {
@@ -236,6 +243,14 @@ input:hover {
     font-size: 18px;
     cursor: pointer;
 }
+
+/* Index design */
+/* .index-grid {
+    display: grid;
+    grid-template-columns: 1fr 2fr 7fr 2fr;
+    border: 1px solid rgb(0, 0, 0);
+} */
+
 /* Footer design */
 .footer {
     background-color: rgba(0, 0, 0, 0.6);
