--- a/style.css
+++ b/style.css
@@ -8,7 +8,11 @@ body {
     font-family: Roboto, Arial;
     background: url(images/diu.jpg) no-repeat left/cover fixed;
 }
-/*  */
+.project {
+    margin-left: 25%;
+    margin-right: 25%;
+}
+/* Popup for mobile users */
 .popup {
     display: none;
     position: fixed;
@@ -32,12 +36,21 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
 }
-
+.desktopSite {
+    border: 1px solid #000000;
+    padding: 6px 10px;
+    border-radius: 3px;
+}
+.popup-content p i,
+.desktopSite i {
+    margin-left: 20px;
+}
 .popup-content p {
-    margin: 0 0 20px 0;
+    margin: 10px 0 10px 0;
 }
 
 .popup-content button {
+    margin-top: 10px;
     padding: 10px 20px;
     background-color: #28a745;
     color: #fff;
@@ -49,11 +62,8 @@ body {
 .popup-content button:hover {
     background-color: #28a745;
 }
-/*  */
-.project {
-    margin-left: 25%;
-    margin-right: 25%;
-}
+/* popup design end */
+
 
 /* Navigation Bar design */
 .header {
@@ -206,7 +216,7 @@ input:hover {
     opacity: .9;
     transition-duration: 0.2s;
 }
-
+/* Form design ends  */
 /* Document Design */
 
 .document-holder {
@@ -278,7 +288,7 @@ input:hover {
 .dateColor {
     color: #000000;
 }
-/* Index Design */
+/* Index Document Design */
 
 .experiment-tag { 
     text-align: center;
@@ -408,7 +418,7 @@ input:hover {
     cursor: pointer;
     z-index: 50;
 }
-
+/* Document design end */
 
 
 /* Footer design */
