--- a/style.css
+++ b/style.css
@@ -70,8 +70,9 @@ body {
 .header {
     background-color: rgba(0, 0, 0, 0.6);
     padding: 1rem;
-    border-radius: 12px;
-
+    border-radius: 1.5cap;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
 }
 .nav-bar {
     display: flex;
@@ -300,24 +301,20 @@ input:hover {
     border: 2px solid rgb(255, 255, 255);
 }
 
- .index-text {
+.index-text {
     color: rgb(39, 39, 158);
     font-size: 50px;
     font-weight: 600;
     margin-top: 60px;
     margin-bottom: 20px;
-    text-align: center;
  }
-.document-holder {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 100px;    
-}
+
 .index-document {
     max-width: 780px;
     min-width: 780px;
     height: 1102.92px;
     background-color: white;
+    text-align: center;
 }
 .index-document-content {
     position: relative;
@@ -328,39 +325,30 @@ input:hover {
     z-index: 1;
 }
 .index-border {
-    padding: 5px;
     border-left: 2px solid rgb(0, 0, 0);
     border-bottom: 2px solid rgb(0, 0, 0);
 }
 .index-left-bottom {
     text-align: center;
-    padding: 5px;
     border-bottom: 2px solid rgb(0, 0, 0);
 }
 .index-right-bottom {
     text-align: center;
-    padding: 5px;
     border-left: 2px solid rgb(0, 0, 0);
     border-bottom: 2px solid rgb(0, 0, 0);
 }
 .index-border-header {
     text-align: center;
-    padding: 5px;
     border-left: 2px solid rgb(0, 0, 0);
     border-bottom: 2px solid rgb(0, 0, 0);
 }
 .index-border-footer {
-    padding: 5px;
     border-left: 2px solid rgb(0, 0, 0);
 }
 .index-right-footer {
-    padding: 5px;
     border-left: 2px solid rgb(0, 0, 0);
 }
 
-.index-left-footer {
-    padding: 5px;
-}
 .index-border,
 .index-left-bottom,
 .index-right-bottom,
@@ -368,12 +356,12 @@ input:hover {
 .index-border-footer, 
 .index-right-footer, 
 .index-left-footer {
-    height: 80px;
+    padding: 5px;
+    height: 80.6px;
 }
 #index-header {
     padding-top: 20px;
     font-size: 22px;
-    color: #1e1870;
 }
 #dateSubmission {
     font-size: 16px;
@@ -384,6 +372,7 @@ input:hover {
 #index-experiment-no,
 #dateSubmission,
 #pageLimit {
+    text-align: center;
     padding-top: 30px;
 }
 #documentContentIndex {
@@ -395,7 +384,6 @@ input:hover {
     margin-right: 10px;
     text-align: left;
     font-size: 18px;
-
     letter-spacing: 0.05em;
 }
 
@@ -413,7 +401,7 @@ input:hover {
     padding: 12px;
     background-color: #28a745;
     border: none;
-    border-radius: 16px;
+    border-radius: 1cap;
     color: white;
     font-size: 18px;
     cursor: pointer;
@@ -425,7 +413,9 @@ input:hover {
 /* Footer design */
 .footer {
     background-color: rgba(0, 0, 0, 0.6);
-    border-radius: 10px;
+    border-radius: 1.5cap;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
     color: white;
     text-align: center;
     padding: 10px;
@@ -435,8 +425,165 @@ input:hover {
     color: white;
     text-decoration: none;
 }
+.footer:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+    transition: .6s;
+}
 
+/* Footer design end */
+/* --------------------------------------- */
+@media only screen and (min-width: 1001px) and (max-width: 1200px) {
+.project {
+    margin-left: 20%;
+    margin-right: 20%; 
+}
+}
+@media only screen and (min-width: 801px) and (max-width: 1000px) {
+.project {
+    margin-left: 17%;
+    margin-right: 17%; 
+}
+}
+/* --------------------------------------- */
 
+/* Medium devices (tablets,laptops, 601px to 1000px) */
+@media only screen and (min-width: 601px) and (max-width: 800px) {
+body {
+    background: url(images/diu.jpg) no-repeat left/cover fixed;
+}
+.project {
+    margin-left: 17%;
+    margin-right: 17%;
+}
+.nav-logo a {
+    font-size: 20px;
+}
+.nav-icon {
+    height: 40px;
+}
+.dropdown button {
+    font-size: 16px;
+}
+.form h1 {
+font-size: 28px;
+}
+
+.category-head-text {
+    font-size: 25px;
+}
+
+input{
+    font-size: 16px;
+}
+.experiment-tag { 
+    font-size: 24px;
+}
+
+.document {
+    width: 600px;
+    min-width: 600px;
+    height: 848.4px;
+}
+.document-watermark {
+    top: 260px;
+    left: 110px;
+    right: 110px;
+}
+.document-content {
+    height: 808.4px;
+    margin: 20px;
+    border: 1px solid rgb(0, 0, 0);
+    font-size: 20px;
+    padding-left: 35px;
+    padding-right: 35px;
+    line-height: 26px;
+    
+}
+.space {
+    padding-left: 100px;
+}
+.page-header-text {
+    font-size: 16px;
+    margin-bottom: 15px;
+
+}
+/* Lab Index */
+.index-text {
+    font-size: 40px;
+    margin-top: 50px;
+    margin-bottom: 20px;
+    }
+
+.index-document {
+    width: 600px;
+    min-width: 600px;
+    height: 848.4px;
+}
+.index-document-content {
+    height: 808.4px;
+    margin: 20px;
+    border: 1px solid rgb(0, 0, 0);
+    font-size: 18px;
+}
+.index-border {
+    font-size: 15px;
+    border-left: 1px solid rgb(0, 0, 0);
+    border-bottom: 1px solid rgb(0, 0, 0);
+}
+.index-left-bottom {
+    border-bottom: 1px solid rgb(0, 0, 0);
+}
+.index-right-bottom {
+    border-left: 1px solid rgb(0, 0, 0);
+    border-bottom: 1px solid rgb(0, 0, 0);
+}
+.index-border-header {
+    border-left: 1px solid rgb(0, 0, 0);
+    border-bottom: 1px solid rgb(0, 0, 0);
+}
+.index-border-footer {
+    border-left: 1px solid rgb(0, 0, 0);
+}
+.index-right-footer {
+    border-left: 1px solid rgb(0, 0, 0);
+}
+
+.index-border,
+.index-left-bottom,
+.index-right-bottom,
+.index-border-header,
+.index-border-footer, 
+.index-right-footer, 
+.index-left-footer {
+    padding: 3px;
+    height: 62px;
+}
+#index-header {
+    font-size: 16px;
+}
+#dateSubmission {
+    font-size: 12px;
+}
+
+#index-experiment-no,
+#dateSubmission,
+#pageLimit {
+    text-align: center;
+    padding-top: 20px;
+    font-size: 14px;
+}
+#documentContentIndex {
+
+    border: 1px solid rgb(0, 0, 0);
+    margin-left: 5px;
+    margin-right: 5px;
+    font-size: 18px;
+}
+/* --------------------------- */
+.download,.image{
+    font-size: 16px;
+}
+}
 /* Small devices (phones, 600px and below) */
 @media only screen and (max-width: 600px) {
 
@@ -444,18 +591,18 @@ body {
     background: url(images/diu.jpg) no-repeat left/cover fixed;
 }
 .nav-logo a {
-    font-size: 22px;
+    font-size: 20px;
 }
 .nav-icon {
     height: 30px;
 }
 .dropdown button {
-    font-size: 14px;
+    font-size: 12px;
     padding: 9px 14px 9px 14px;
 }
 .project {
-    margin-left: 2%;
-    margin-right: 2%;
+    margin-left: 8%;
+    margin-right: 8%;
 }
 
 .form h1 {
@@ -479,7 +626,113 @@ input{
 .experiment-tag { 
     font-size: 20px;
 }
+.document {
+    width: 420px;
+    min-width: 420px;
+    height: 593.88px;
+}
+.document-watermark {
+    top: 200px;
+    left: 80px;
+    right: 80px;
+}
+.document-content {
+    height: 565.88px;
+    margin: 14px;
+    border: 1px solid;
+    font-size: 14px;
+    padding-left: 25px;
+    padding-right: 25px;
+    line-height: 18px;
+}
+.space {
+    padding-left: 70px;
+}
+.page-header-text {
+    font-size: 10px;
+    margin-bottom: 15px;
+}
+.page-header-text-underline,
+.category-head-text-style-underline {
+    border-bottom: 1px solid;
+}
+/* Lab Index */
+.index-text {
+    font-size: 30px;
+    margin-top: 30px;
+    margin-bottom: 10px;
+ }
 
+.index-document {
+    width: 420px;
+    min-width: 420px;
+    height: 593.88px;
+}
+.index-document-content {
+    height: 565.88px;
+    margin: 14px;
+    font-size: 14px;
+}
+.index-border {
+    font-size: 12px;
+    border-left: 1px solid rgb(0, 0, 0);
+    border-bottom: 1px solid rgb(0, 0, 0);
+}
+.index-left-bottom {
+    border-bottom: 1px solid rgb(0, 0, 0);
+}
+.index-right-bottom {
+    border-left: 1px solid rgb(0, 0, 0);
+    border-bottom: 1px solid rgb(0, 0, 0);
+}
+.index-border-header {
+    border-left: 1px solid rgb(0, 0, 0);
+    border-bottom: 1px solid rgb(0, 0, 0);
+}
+.index-border-footer {
+    border-left: 1px solid rgb(0, 0, 0);
+}
+.index-right-footer {
+    border-left: 1px solid rgb(0, 0, 0);
+}
+
+.index-border,
+.index-left-bottom,
+.index-right-bottom,
+.index-border-header,
+.index-border-footer, 
+.index-right-footer, 
+.index-left-footer {
+    padding: 1px;
+    height: 43.9px;
+}
+#index-header {
+    font-size: 12px;
+    padding-top: 10px;
+}
+#dateSubmission {
+    font-size: 12px;
+}
+
+#index-experiment-no,
+#dateSubmission,
+#pageLimit {
+    text-align: center;
+    padding-top: 12px;
+    font-size: 10px;
+}
+#documentContentIndex {
+
+    border: 1px solid rgb(0, 0, 0);
+    margin-left: 2px;
+    margin-right: 2px;
+    font-size: 12px;
+}
+/* --------------------------- */
+.download,.image{
+    font-size: 10px;
+    padding: 8px 12px;
+}
 .footer a {
     font-size: 10px;
     color: white;
@@ -490,28 +743,4 @@ footer p {
 }
 }
 
-/* Medium devices (tablets,laptops, 601px to 1000px) */
-@media only screen and (min-width: 601px) and (max-width: 1000px) {
-body {
-    background: url(images/diu.jpg) no-repeat left/cover fixed;
-}
-.project {
-    margin-left: 20%;
-    margin-right: 20%;
-}
 
-.form h1 {
-font-size: 28px;
-}
-
-.category-head-text {
-    font-size: 25px;
-}
-
-input{
-    font-size: 16px;
-}
-.experiment-tag { 
-    font-size: 24px;
-}
-}
