--- a/style.css
+++ b/style.css
@@ -389,7 +389,16 @@ input:hover {
 
 /* Index Design End */
 
-
+/* Website reference text */
+.page-reference-text-index {
+    font-size: 14px;
+    margin-top: -25px;
+}
+.page-reference-text {
+    text-align: center;
+    font-size: 14px;
+    margin-top: -25px;
+}
 .document-buttons{
     margin-top: 50px;
     display: flex;
@@ -579,6 +588,14 @@ input{
     margin-right: 5px;
     font-size: 18px;
 }
+.page-reference-text-index {
+    font-size: 10px;
+    margin-top: -18px;
+}
+.page-reference-text {
+    font-size: 10px;
+    margin-top: -18px;
+}
 /* --------------------------- */
 .download,.image{
     font-size: 16px;
@@ -729,6 +746,14 @@ input{
     font-size: 12px;
 }
 /* --------------------------- */
+.page-reference-text-index {
+    font-size: 8px;
+    margin-top: -14px;
+}
+.page-reference-text {
+    font-size: 8px;
+    margin-top: -14px;
+}
 .download,.image{
     font-size: 10px;
     padding: 8px 12px;
