--- a/style.css
+++ b/style.css
@@ -240,13 +240,13 @@ input:hover {
     
 }
 
-.submit:hover,.download:hover,.image:hover, .docx:hover {
+.submit:hover,.download:hover,.image:hover, .docx:hover , .edit:hover {
     background-color: #ffffff;
     color: #000000;
     opacity: .9;
     transition-duration: 0.4s;
 }
-.submit:hover:active,.download:hover:active,.image:hover:active, .docx:hover:active {
+.submit:hover:active,.download:hover:active,.image:hover:active, .docx:hover:active , .edit:hover:active {
     background-color: #28a745;
     color: #ffffff;
     opacity: .9;
@@ -440,7 +440,7 @@ input:hover {
     justify-content: center;
     gap: 20px;
 }
-.download,.image, .docx{
+.download,.image, .docx, .edit{
     width: auto !important;
     padding: 12px;
     background-color: #28a745;
@@ -643,7 +643,7 @@ input{
     margin-top: -16px;
 }
 /* --------------------------- */
-.download,.image{
+.download,.image, .edit{
     font-size: 16px;
 }
 }
@@ -811,7 +811,7 @@ input{
     font-size: 8px;
     margin-top: -12px;
 }
-.download,.image{
+.download,.image, .edit{
     font-size: 10px;
     padding: 8px 12px;
 }
@@ -990,7 +990,7 @@ input{
 }
 
 
-.download,.image{
+.download,.image, .edit{
     font-size: 10px;
     padding: 8px 12px;
 }
